# babyd-detector

./: .gitignore  README.md
control/: .gitattributes  README.md  reg_def.json  setup.cfg  setup.py
control/src/babyd/: BabyD_Adapter.py  BabyD_ctrl.py  RegisterMapper.py  _version.py  adapter.py  adxdma.py  alphadata_ctrl.py  base_adapter.py  capture_manager.py  capture_state_machine.py  controller.py  loki_params.py  util.py  xdma.py
control/src/babyd/adxdma/: adapter.py  controller.py
control/src/babyd/capture/: capture_manager.py  capture_state_machine.py
control/src/babyd/interfaces/: adxdma_params.py  loki_params.py
control/src/babyd/live_data/: ipc_liveview.py  liveview.py
control/src/babyd/utilities/: loaded_adapters.py  util.py
control/test/config/: babyd.cfg  babyd_test.cfg  josh_babyd.json  odin_data_configs.json  reg_def.json
control/test/static/babyd-react/: package-lock.json  package.json
control/test/static/babyd-react/public/: index.html
control/test/static/babyd-react/src/: App.css  App.js  RegisterDisplay.jsx
control/test/static/babyd-toplevel-ui/: README.md  package-lock.json  package.json
control/test/static/babyd-toplevel-ui/src/: App.css  App.js
control/test/static/babyd-toplevel-ui/src/components/: OdinGraphModified
control/tests/config/: babyd.cfg  babyd_lv.json  odin_data_configs.json
data/common/include/: BabydDefinitions.h  BabydDetectorDefinitions.h
data/config/: BabydLiveView.json  Babyd_single.json  Babyd_single_chunked.json  Babyd_single_raw_built.json  Babyd_single_raw_built_lv.json  Babyd_single_raw_built_lv_chunked.json  fp_log4cxx_debug.xml  fp_log4cxx_debug_trace.xml
data/frameProcessor/include/: BabydDecoder.h  BabydDetectorDecoder.h  BabydDetectorPlugin.h  BabydFrameBuilderConfiguration.h  BabydFrameBuilderCore.h  BabydFrameWrapperCore.h  BabydFrameWrapperCoreConfiguration.h  BabydPlugin.h
data/frameProcessor/src/: BabydDetectorPlugin.cpp  BabydFrameBuilderCore.cpp  BabydFrameWrapperCore.cpp  BabydPlugin.cpp  CMakeLists.txt
lib/: pyxdma.h  pyxdma_builder.py
