[metadata]
name = babyd-top-level
description = Odin Control based UI for the top level control of babyd
url = https://github.com/stfc-aeg/babyd-detector
author = Josh Harris
author_email = josh.harris@stfc.ac.uk
license = Apache License 2.0
long_description = file: README
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/babyd/_version.py
versionfile_build = babyd/_version.py
tag_prefix = 

